--- a/assets/stylesheet/style.css
+++ b/assets/stylesheet/style.css
@@ -24,8 +24,149 @@ button{
     margin: 2rem 1.41rem;
 }
 
+.response{
+    background-color:#ffF;
+    width: 23.5rem;
+    height: 55.5rem;
+    margin: 2.35rem 2rem 2.35rem 0;
+    border-radius: 1.88rem;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.08);
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 1.88rem;
+}
+
+.noanswer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 1.88rem;
+
+}
+
+.response  img {
+    margin: 150px 0 100px 0;
+}
+
+.response  p{
+    font-size: 1.41rem;
+    text-align: center;
+    font-weight: 700;
+}
+
+.noanswer > span{
+    margin:  20px 50px;
+    font-size: 0.94rem;
+    text-align: center;
+    font-weight: 400;
+}
+
+.response .answer{
+    font-size: 1.41rem;
+    font-weight: 400;
+    margin: 2rem 0;
+}
+
+.copy{
+   background-color: #ffF;
+   border: 1px solid #0A3871; 
+   color: #0A3871;
+   position: absolute;
+   bottom: 52px;
+}
+.action{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin: 9.4rem 0rem 4.23rem 14rem;
+}
+
+.action > textarea {
+    width: 100%;
+    height: 50%;
+    font-size: 1.88rem;
+    font-weight: 400;
+    border: none;
+    background-color: #F3F5FC;
+    color: #0A3871;
+    padding: 10px;
+}
+.action > textarea::placeholder{
+    color: #0A3871;
+}
+.action > textarea:focus-visible{
+    outline: none;
+}
+
+.action div{
+    display: flex;
+}
+
+.Descript{
+    background-color: #D8DFE8;
+    color: #0A3871;
+    border: 1px solid #0A3871;
+
+}
+.alert{
+    position: absolute;
+    margin-left: 0.7rem;
+    text-align: center;
+    align-items: center;
+    color: #495057;
+}
+
 
 .disappear{
     display: none;
 }
 
+@media (max-width: 800px) {
+
+    main{
+        flex-direction: column;
+        margin: auto;
+    }
+
+    .action{
+        margin:150px auto 20px auto;
+    }
+
+    .response{
+        width: 90%;
+        height: inherit;
+        margin:0 auto 50px auto;
+    }
+
+    .response  img {
+        display: none;
+    }
+
+    .copy{
+        position: inherit;
+        width: 100%;
+        margin: 50px auto 0 auto; 
+    }
+
+     .response .answer{
+        font-size: 1.41rem;
+        font-weight: 400;
+        margin: 0;
+    }
+
+    .logo{
+        position: absolute;
+        left: 10px;
+        top: 20px;
+    }
+
+  }
+
+
+
+
+
+  
+  
